# VTV

./: .env.example  .gitignore  LICENSE  README.md  compose.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  start.sh  stop.sh
.github/workflows/: ci.yml
apps/control-api/: pyproject.toml
apps/control-api/src/vtv_control_api/: __main__.py  app.py  config.py  database.py  logging.py  repository.py  storage.py
apps/mac-client/: eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/mac-client/src-tauri/: Cargo.toml  tauri.conf.json
apps/mac-client/src-tauri/capabilities/: default.json
apps/mac-client/src-tauri/src/: lib.rs  local_agent.rs  main.rs
apps/orchestrator/: pyproject.toml
apps/orchestrator/src/vtv_orchestrator/: __init__.py  __main__.py  config.py  mock_worker.py  modal_executor.py  outbox_dispatcher.py  runner.py  scheduler.py  stage_router.py  storage.py
configs/environments/: dev.yaml  local.yaml  prod.yaml  staging-modal.yaml  staging.yaml
configs/quality_profiles/: preview.yaml  research_best.yaml  standard.yaml
docs/: API_REFERENCE.md  COMPLETION_LOG.md  DATABASE.md  IMPLEMENTATION_PLAN.md  MODEL_ONBOARDING.md  PROJECT_PROGRESS.md  REMAINING_WORK.md  openapi.json
docs/architecture/: ANALYSIS_DOCUMENTS.md  ARTIFACT_RELEASES.md  AUDIO_ANALYSIS_ADAPTERS.md  AUDIO_STEM_SEPARATION.md  BASELINE_PIPELINE.md  CANDIDATE_SELECTION.md  DB_ERD.md  DELIVERY_MANIFEST_CONTRACT.md  EPISODE_ASSEMBLY_RUNTIME.md  EPISODE_ASSEMBLY_WORKFLOW.md  EPISODE_DUBBING_WORKFLOW.md  EPISODE_LIPSYNC_WORKFLOW.md  GOLDEN_MODEL_GATES.md  LIPSYNC_PRODUCTION_RUNTIME.md  LOCAL_MEDIA_AGENT.md  MEDIA_ANALYSIS_FOUNDATION.md  MEDIA_INGEST.md  MODAL_ANALYSIS_RUNTIME.md  MODEL_ADAPTER_RUNTIME.md  MODEL_RELEASE_REGISTRY.md  PRODUCTION_LOCALIZATION_CONTRACTS.md  PRODUCTION_VISION_ADAPTERS.md  PROJECT_ANALYSIS_FANOUT.md  PROJECT_SYNTHESIS.md  README.md  RIGHTS_RELEASE_GATES.md  STAGE_ROUTING.md  VISION_ANALYSIS_ADAPTERS.md  WORKER_OBJECT_STORAGE.md
docs/design/: MAC_CLIENT_DESIGN.md  MAC_CLIENT_FIDELITY.md
docs/model-cards/: TEMPLATE.md
docs/runbooks/: BUDGET_OVERRUN.md  DATA_DELETION.md  FAULT_RECOVERY.md  LOCAL_DEVELOPMENT.md  MAC_SIGNING.md  MODEL_CIRCUIT_BREAK.md
infra/ci/: github-actions.yml.example
infra/postgres/: init-test-db.sql
migrations/: 0001_core.sql  0002_jobs.sql  0003_media_ingest.sql  0004_artifact_releases.sql  0005_analysis_documents.sql  0006_model_releases.sql  0007_benchmark_releases.sql  0008_rights_releases.sql  0009_render_variants_qc.sql  0010_deliveries.sql  0011_c2pa_status.sql  0012_evaluator_releases.sql  0013_project_archive.sql  0014_characters.sql  0015_locations.sql  0016_continuity.sql  0017_governance.sql  0018_workflow_plans.sql  0019_localization_releases.sql  0020_provenance.sql  0021_model_profiles.sql  0022_users_and_adoption_constraint.sql  0023_stage_runtime_profile_fk.sql  0024_outbox_delivery_semantics.sql  0025_governance_foreign_keys.sql  0026_outbox_dispatch_audit.sql  0027_model_reproducibility_gate.sql  0028_runtime_profile_snapshots.sql  0029_stage_attempt_leases.sql
modal_apps/: __init__.py  analysis.py  assemble.py  audio.py  control_api.py  production.py  visual.py
scripts/: apply_migrations.py  setup_modal.py
tests/component/: test_analysis_worker.py  test_assemble_worker.py  test_audio_worker.py  test_c2pa_worker.py  test_media_pipeline.py  test_production_worker.py  test_shot_routing_worker.py  test_vision_worker.py  test_visual_qc_stage.py  test_visual_worker.py
tests/golden/: conftest.py  test_asr_golden.py  test_lipsync_golden.py  test_tts_golden.py  test_vision_golden.py  test_visual_golden.py
tests/integration/: conftest.py  test_artifact_release_api.py  test_batch_job_api.py  test_c2pa_signing_api.py  test_candidate_selection_api.py  test_control_api.py  test_delivery_api.py  test_dubbing_job_api.py  test_e2e_workflow.py  test_episode_assembly_job_api.py  test_evaluator_release_api.py  test_exception_center_api.py  test_lipsync_job_api.py  test_model_promote_api.py  test_model_release_api.py  test_postgres_repository.py  test_production_job_api.py  test_production_quality_api.py  test_project_lifecycle_api.py  test_rights_release_api.py  test_upload_api.py
tests/unit/: test_alerts.py  test_analysis_dag.py  test_artifact_releases.py  test_assembly_contracts.py  test_assembly_scheduler_binding.py  test_asset_search.py  test_async_ttl_cache.py  test_audio_analysis.py  test_audio_golden_metrics.py  test_audio_golden_runner.py  test_audio_stems.py  test_batch_retry.py  test_c2pa_state_machine.py  test_c2pa_tool_signer.py  test_candidate_adoption.py  test_concurrency_policy.py  test_cost_report.py  test_delivery_manifest.py  test_delivery_package.py  test_domain_artifact_schema.py  test_episode_job_summary.py  test_episode_summary.py  test_evaluator_release.py  test_golden_benchmark.py  test_market_config.py  test_market_subtitle_cps.py  test_mock_worker.py  test_modal_executor.py  test_model_hotupdate.py  test_model_registry.py  test_model_runtime.py  test_model_runtime_config.py  test_outbox_stream.py  test_produce_request.py  test_production_audio_adapters.py  test_production_contracts.py  test_production_rollback.py  test_production_runtime_factory.py  test_production_vision_adapters.py  test_project_archive.py  (+23 more)
workers/analysis/: pyproject.toml
workers/analysis/src/vtv_analysis_worker/: __init__.py  benchmark.py  config.py  factory.py  runtime.py  vision_benchmark.py  worker.py
workers/assemble/: pyproject.toml
workers/assemble/src/vtv_assemble_worker/: __init__.py  worker.py
workers/audio/: pyproject.toml
workers/audio/src/vtv_audio_worker/: __init__.py  benchmark.py  config.py  worker.py
workers/media/: pyproject.toml
workers/media/src/vtv_media_worker/: __init__.py  worker.py
workers/production/: pyproject.toml
workers/production/src/vtv_production_worker/: __init__.py  config.py  factory.py  runtime.py  worker.py
workers/visual/: pyproject.toml
workers/visual/src/vtv_visual_worker/: __init__.py  factory.py  worker.py
(+15 files in other folders)
