[project]
name = "vtv-workspace"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "modal>=1.5.2",
  "pillow>=11.1.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
  "ruff>=0.11.0",
]

[tool.uv.workspace]
members = [
  "apps/control-api",
  "apps/orchestrator",
  "packages/db",
  "packages/evaluation",
  "packages/analysis",
  "packages/audio",
  "packages/media",
  "packages/production",
  "packages/schemas",
  "packages/storage",
  "workers/media",
  "workers/production",
  "workers/analysis",
  "workers/audio",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
