[project]
name = "vtv-orchestrator"
version = "0.1.0"
description = "Database-backed VTV stage scheduler"
requires-python = ">=3.12"
dependencies = [
  "sqlalchemy[asyncio]>=2.0.39",
  "vtv-db",
  "vtv-media-worker",
  "vtv-analysis-worker",
  "vtv-schemas",
]

[project.scripts]
vtv-orchestrator = "vtv_orchestrator.__main__:main"

[tool.uv.sources]
vtv-db = { workspace = true }
vtv-media-worker = { workspace = true }
vtv-analysis-worker = { workspace = true }
vtv-schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
