[project]
name = "vtv-orchestrator"
version = "0.1.0"
description = "Database-backed VTV stage scheduler"
requires-python = ">=3.12"
dependencies = [
  "modal>=1.5.2,<2",
  "sqlalchemy[asyncio]>=2.0.39",
  "pydantic-settings>=2.8.1",
  "vtv-db",
  "vtv-media-worker",
  "vtv-analysis-worker",
  "vtv-audio-worker",
  "vtv-production-worker",
  "vtv-assemble-worker",
  "vtv-schemas",
  "vtv-storage",
]

[project.scripts]
vtv-orchestrator = "vtv_orchestrator.__main__:main"

[tool.uv.sources]
vtv-db = { workspace = true }
vtv-media-worker = { workspace = true }
vtv-analysis-worker = { workspace = true }
vtv-audio-worker = { workspace = true }
vtv-production-worker = { workspace = true }
vtv-assemble-worker = { workspace = true }
vtv-schemas = { workspace = true }
vtv-storage = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
