[project]
name = "vtv-media-worker"
version = "0.1.0"
description = "Ingest, proxy, and shot detection worker for VTV"
requires-python = ">=3.12"
dependencies = ["vtv-media", "vtv-schemas"]

[tool.uv.sources]
vtv-media = { workspace = true }
vtv-schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
