[package]
name = "vtv-mac-client"
version = "0.1.0"
description = "VTV macOS control client"
authors = ["VTV"]
edition = "2021"

[lib]
name = "vtv_mac_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
