[package]
name = "vtv-mac-client"
version = "0.1.0"
description = "VTV macOS control client"
authors = ["VTV"]
edition = "2021"

[lib]
name = "vtv_mac_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util"] }
