[package]
name = "vtv-mac-client"
version = "0.1.0"
description = "VTV native Mac control client"
authors = ["VTV"]
edition = "2021"

[lib]
name = "vtv_mac_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["fs", "io-util"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
